Switch from java.xml.bind.DatatypeConverter to java.util.Base64 in preparation for JDK 11